--- a/build.gradle
+++ b/build.gradle
@@ -53,3 +53,12 @@ processResources {
         filter ReplaceTokens, tokens: [version: version]
     }
 }
+
+processResources {
+    def props = [version: version]
+    inputs.properties props
+    filteringCharset 'UTF-8'
+    filesMatching('plugin.yml') {
+        expand props
+    }
+}
