--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 main: io.github.wickeddroidmx.plugin.Main
 name: UHCHealthDark
-version: 1.17
+version: '${version}'
 api-version: 1.13
 description: Plugin oficial de HealthDark
 author: WickedDroid
