--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'io.github.wickeddroidmx'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 compileJava {
     options.encoding = "UTF-8"
